Added import and frequently used helper functions

--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -17,14 +17,55 @@
     "* Warp the detected lane boundaries back onto the original image.\n",
     "* Output visual display of the lane boundaries and numerical estimation of lane curvature and vehicle position.\n",
     "\n",
-    "---"
+    "---\n",
+    "# 1) Camera calibration using chessboard images"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# 1) Camera calibration using chessboard images"
+    "# Importing some useful packages\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import glob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Helper functions\n",
+    "# Show 2 images on the same line for easy comparison\n",
+    "def show2img(img1, img2, title1, title2):\n",
+    "    f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "    f.tight_layout()\n",
+    "    ax1.imshow(img1)\n",
+    "    ax1.set_title(title1, fontsize=50)\n",
+    "    ax2.imshow(img2)\n",
+    "    ax2.set_title(title2, fontsize=50)\n",
+    "    plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)\n",
+    "\n",
+    "# Show 2 images (the second one with gray scale) on the same line for easy comparison\n",
+    "def show2img_gray(img1, img2, title1, title2):\n",
+    "    f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "    f.tight_layout()\n",
+    "    ax1.imshow(img1)\n",
+    "    ax1.set_title(title1, fontsize=50)\n",
+    "    ax2.imshow(img2, cmap='gray')\n",
+    "    ax2.set_title(title2, fontsize=50)\n",
+    "    plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
   },
   {
