Added code to find chessboard corners on calibration images

--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -35,6 +35,7 @@
     "import glob\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
+    "import os\n",
     "%matplotlib inline"
    ]
   },
@@ -66,6 +67,67 @@
     "    ax2.imshow(img2, cmap='gray')\n",
     "    ax2.set_title(title2, fontsize=50)\n",
     "    plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
+    "nx = 9 # the number of inside corners in x\n",
+    "ny = 6 # the number of inside corners in y\n",
+    "\n",
+    "objp = np.zeros((ny*nx,3), np.float32)\n",
+    "objp[:,:2] = np.mgrid[0:nx,0:ny].T.reshape(-1,2)\n",
+    "\n",
+    "# Arrays to store object points and image points from all the images.\n",
+    "objpoints = [] # 3d points in real world space\n",
+    "imgpoints = [] # 2d points in image plane."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This image can't be processed : calibration5.jpg\n",
+      "This image can't be processed : calibration4.jpg\n",
+      "This image can't be processed : calibration1.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a list of calibration images\n",
+    "images = os.listdir(\"camera_cal/\")\n",
+    "\n",
+    "# Step through the list and search for chessboard corners\n",
+    "for fname in images:\n",
+    "    # Read image\n",
+    "    img = cv2.imread('camera_cal/'+fname)\n",
+    "    # Create grayscale image\n",
+    "    gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "    # Find the chessboard corners\n",
+    "    ret, corners = cv2.findChessboardCorners(gray, (nx,ny),None)\n",
+    "\n",
+    "    if ret == True:\n",
+    "        # If found, add object points, image points\n",
+    "        objpoints.append(objp)\n",
+    "        imgpoints.append(corners)\n",
+    "        # Draw and display the corners\n",
+    "        img = cv2.drawChessboardCorners(img, (nx,ny), corners, ret)\n",
+    "        write_name = 'output_images/corners_'+fname\n",
+    "        cv2.imwrite(write_name, img)\n",
+    "    else:\n",
+    "        # If not, return the filename\n",
+    "        print(\"This image can't be processed : \"+fname)"
    ]
   },
   {
