Undistort the calibration images

--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -191,6 +191,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Undistort each chessboard image using the calculated matrix (mtx) & coefficients (dist)\n",
+    "for fname in images:\n",
+    "    # Read image\n",
+    "    img = cv2.imread('camera_cal/'+fname)\n",
+    "    # Create grayscale image\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    # Create undistorted image & save to file in \"output_images\" folder\n",
+    "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "    write_name = 'output_images/undistorted_'+fname\n",
+    "    cv2.imwrite(write_name, undist)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
