--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -275,6 +275,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# A function that takes an image, gradient orientation,\n",
+    "# and threshold min / max values.\n",
+    "def abs_sobel_thresh(img, orient='x', sobel_kernel=3, thresh=(0, 255)):\n",
+    "    # Convert to grayscale\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    # Apply x or y gradient with the OpenCV Sobel() function\n",
+    "    # and take the absolute value\n",
+    "    if orient == 'x':\n",
+    "        abs_sobel = np.absolute(cv2.Sobel(gray, cv2.CV_64F, 1, 0))\n",
+    "    if orient == 'y':\n",
+    "        abs_sobel = np.absolute(cv2.Sobel(gray, cv2.CV_64F, 0, 1))\n",
+    "    # Rescale back to 8 bit integer\n",
+    "    scaled_sobel = np.uint8(255*abs_sobel/np.max(abs_sobel))\n",
+    "    # Create a copy and apply the threshold to generate binary image\n",
+    "    grad_binary = np.zeros_like(scaled_sobel)\n",
+    "    grad_binary[(scaled_sobel >= thresh[0]) & (scaled_sobel <= thresh[1])] = 1 \n",
+    "    return grad_binary"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
