Added a function to get binary image with thresholded gradient magnitude

--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +298,25 @@
     "    # Create a copy and apply the threshold to generate binary image\n",
     "    grad_binary = np.zeros_like(scaled_sobel)\n",
     "    grad_binary[(scaled_sobel >= thresh[0]) & (scaled_sobel <= thresh[1])] = 1 \n",
-    "    return grad_binary"
+    "    return grad_binary\n",
+    "\n",
+    "# A function to return the magnitude of the gradient\n",
+    "# for a given sobel kernel size and threshold values\n",
+    "def mag_thresh(img, sobel_kernel=3, mag_thresh=(0, 255)):\n",
+    "    # Convert to grayscale\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    # Take both Sobel x and y gradients\n",
+    "    sobelx = cv2.Sobel(gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobely = cv2.Sobel(gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    # Calculate the gradient magnitude\n",
+    "    gradmag = np.sqrt(sobelx**2 + sobely**2)\n",
+    "    # Rescale to 8 bit\n",
+    "    scale_factor = np.max(gradmag)/255 \n",
+    "    gradmag = (gradmag/scale_factor).astype(np.uint8) \n",
+    "    # Create a binary image of ones where threshold is met, zeros otherwise\n",
+    "    mag_binary = np.zeros_like(gradmag)\n",
+    "    mag_binary[(gradmag >= mag_thresh[0]) & (gradmag <= mag_thresh[1])] = 1\n",
+    "    return mag_binary"
    ]
   },
   {
