Added a function to get binary image with thresholded gradient direction

--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +316,22 @@
     "    # Create a binary image of ones where threshold is met, zeros otherwise\n",
     "    mag_binary = np.zeros_like(gradmag)\n",
     "    mag_binary[(gradmag >= mag_thresh[0]) & (gradmag <= mag_thresh[1])] = 1\n",
-    "    return mag_binary"
+    "    return mag_binary\n",
+    "\n",
+    "# A function to return the direction of the gradient\n",
+    "# for a given sobel kernel size and threshold values\n",
+    "def dir_threshold(img, sobel_kernel=3, thresh=(0, np.pi/2)):\n",
+    "    # Grayscale\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    # Calculate the x and y gradients\n",
+    "    sobelx = cv2.Sobel(gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobely = cv2.Sobel(gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    # Take the absolute value of the gradient direction, \n",
+    "    # apply a threshold, and create a binary image result\n",
+    "    absgraddir = np.arctan2(np.absolute(sobely), np.absolute(sobelx))\n",
+    "    dir_binary =  np.zeros_like(absgraddir)\n",
+    "    dir_binary[(absgraddir >= thresh[0]) & (absgraddir <= thresh[1])] = 1\n",
+    "    return dir_binary"
    ]
   },
   {
