Added a function to get binary image with HLS color threshold

--- a/P2-AdvancedLaneFinding.ipynb
+++ b/P2-AdvancedLaneFinding.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -331,7 +331,15 @@
     "    absgraddir = np.arctan2(np.absolute(sobely), np.absolute(sobelx))\n",
     "    dir_binary =  np.zeros_like(absgraddir)\n",
     "    dir_binary[(absgraddir >= thresh[0]) & (absgraddir <= thresh[1])] = 1\n",
-    "    return dir_binary"
+    "    return dir_binary\n",
+    "\n",
+    "# A function that thresholds the S-channel of HLS\n",
+    "def hls_select(img, thresh=(0, 255)):\n",
+    "    hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "    s_channel = hls[:,:,2]\n",
+    "    hls_binary = np.zeros_like(s_channel)\n",
+    "    hls_binary[(s_channel > thresh[0]) & (s_channel <= thresh[1])] = 1\n",
+    "    return hls_binary"
    ]
   },
   {
